--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,11 +12,24 @@
     <!--<string name="error_invalid_password">This password is too short</string>-->
     <!--<string name="error_incorrect_password">This password is incorrect</string>-->
     <!--<string name="error_field_required">This field is required</string>-->
-    <string name="app_name">Login</string>
-    <!--Menu options-->
-    <string name="list">List View</string>
-    <string name="grid">Grid View</string>
+    <!--<string name="app_name">Login</string>-->
+    <!--&lt;!&ndash;Menu options&ndash;&gt;-->
+    <!--<string name="list">List View</string>-->
+    <!--<string name="grid">Grid View</string>-->
 
-    <item name="ed_Text_Name" type="id" />
-    <item name="ed_email" type="id" />
+    <!--<item name="ed_Text_Name" type="id" />-->
+    <!--<item name="ed_email" type="id" />-->
+    <string name="action_settings">Settings</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="login">Login</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="registration_instruction">I do not have a username and password details. Click the button below to register</string>
+    <string name="register_button">Register Now</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="welcome">WELCOME</string>
+    <string name="is_login">You have been successfully login </string>
+    <string name="sign_up">Sign Up Now</string>
+
 </resources>
