--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,24 @@
     <string name="app_name">MyPetApp</string>
     <string name="title_activity_browse">MyPetApp</string>
     <string name="title_activity_adapter_layout">Pets</string>
+    <string name="menu_settings">Settings</string>
+    <string name="main_menu">Main Menu</string>
+    <string name="copyright">&#169; 2017 My Pet App.</string>
+
+    <string-array name="main_menu_list">
+        <item >Pet List</item>
+        <item >Your Pet</item>
+    </string-array>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="no_internet">Please, enable internet connection before using this app</string>
+    <string name="category_list">Category List</string>
+    <string name="search">Search menu</string>
+    <string name="detail">Detail</string>
+    <string name="no_name">No Name</string>
+    <string name="setting">Setting</string>
+    <string name="accounts">ACCOUNT SETTING</string>
+    <string name="confirm">Confirm</string>
 
     <!-- Strings related to login -->
     <!--<string name="prompt_email">Email</string>-->
