--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,57 +1,35 @@
 <resources>
     <string name="app_name">MyPetApp</string>
-    <string name="title_activity_browse">MyPetApp</string>
-    <string name="title_activity_adapter_layout">Pets</string>
-    <string name="menu_settings">Settings</string>
-    <string name="main_menu">Main Menu</string>
-    <string name="copyright">&#169; 2017 My Pet App.</string>
+    <string name="Name">_______</string>
+    <string name="Race">_______</string>
+    <string name="Specie">specie :</string>
+    <string name="next">next</string>
+    <string name="previous">previous</string>
+    <string name="Dogs">Dogs</string>
+    <string name="Cats">Cats</string>
+    <string name="first_name">First Name</string>
+    <string name="last_name">Last Name</string>
+    <string-array name="pet_names_xml">pet_names
+        <item> Jack</item>
+        <item> Bizou</item>
 
-    <string-array name="main_menu_list">
-        <item >Pet List</item>
-        <item >Your Pet</item>
     </string-array>
-    <string name="yes">Yes</string>
-    <string name="no">No</string>
-    <string name="no_internet">Please, enable internet connection before using this app</string>
-    <string name="category_list">Category List</string>
-    <string name="search">Search menu</string>
-    <string name="detail">Detail</string>
-    <string name="no_name">No Name</string>
-    <string name="setting">Setting</string>
-    <string name="accounts">ACCOUNT SETTING</string>
-    <string name="confirm">Confirm</string>
+    <string-array name="pet_breeds_xml">pet_breeds
+        <item>Shepferd</item>
+        <item>Siamese</item>
+    </string-array>
+    <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <!--<string name="prompt_email">Email</string>-->
-    <!--<string name="prompt_password">Password (optional)</string>-->
-    <!--<string name="action_sign_in">Sign in or register</string>-->
-    <!--<string name="action_sign_in_short">Sign in</string>-->
-    <!--<string name="error_invalid_email">This email address is invalid</string>-->
-    <!--<string name="error_invalid_password">This password is too short</string>-->
-    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
-    <!--<string name="error_field_required">This field is required</string>-->
-    <!--<string name="app_name">Login</string>-->
-    <!--&lt;!&ndash;Menu options&ndash;&gt;-->
-    <!--<string name="list">List View</string>-->
-    <!--<string name="grid">Grid View</string>-->
-
-    <!--<item name="ed_Text_Name" type="id" />-->
-    <!--<item name="ed_email" type="id" />-->
-    <string name="action_settings">Settings</string>
-    <string name="username">Username</string>
-    <string name="password">Password</string>
-    <string name="email">Email</string>
-    <string name="login">Login</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="registration_instruction">I do not have a username and password details. Click the button below to register</string>
-    <string name="register_button">Register Now</string>
-    <string name="title_activity_register">Registration</string>
-    <string name="welcome">WELCOME</string>
-    <string name="is_login">You have been successfully login </string>
-    <string name="sign_up">Sign Up Now</string>
-    <string name="db_exist_alert" />
-
-    <item name="txtAlert" type="id" />
-    <item name="list_view" type="id" />
-    <item name="btnAdd" type="id" />
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
 </resources>
