--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,35 +1,39 @@
 <resources>
-    <string name="app_name">MyPetApp</string>
-    <string name="Name">_______</string>
-    <string name="Race">_______</string>
-    <string name="Specie">specie :</string>
-    <string name="next">next</string>
-    <string name="previous">previous</string>
-    <string name="Dogs">Dogs</string>
-    <string name="Cats">Cats</string>
-    <string name="first_name">First Name</string>
-    <string name="last_name">Last Name</string>
-    <string-array name="pet_names_xml">pet_names
-        <item> Jack</item>
-        <item> Bizou</item>
-
-    </string-array>
-    <string-array name="pet_breeds_xml">pet_breeds
-        <item>Shepferd</item>
-        <item>Siamese</item>
-    </string-array>
-    <string name="title_activity_login">Sign in</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+    <string name="app_name">Petasy</string>
+    <string name="petNameText">Name</string>
+    <string name="petInfoText">Breed, Age, Sex</string>
+    <string name="petImageDescr">Pet image</string>
+    <string name="colorText">Color</string>
+    <string name="petColorText">Pet color</string>
+    <string name="breedText">Breed</string>
+    <string name="chipIDText">Chip ID</string>
+    <string name="petChipIDText">Chip ID</string>
+    <string name="ownerText">Owner</string>
+    <string name="ownerName">Owner name</string>
+    <string name="ownerNumber">Owner number</string>
+    <string name="ownerAddress">Owner address</string>
+    <string name="vetText">Vet</string>
+    <string name="vetName">Vet name</string>
+    <string name="vetNumber">Vet number</string>
+    <string name="vetAddress">Vet address</string>
+    <string name="marksText">Special characteristics</string>
+    <string name="petMarksText">Pet marks</string>
+    <string name="noPetText">No petInfo to show!</string>
+    <string name="noPetsText">No petInfos to show!</string>
+    <string name="browserText">Browse</string>
+    <string name="dogsText">Dog</string>
+    <string name="catsText">Cat</string>
+    <string name="otherText">Other</string>
+    <string name="menuList">List</string>
+    <string name="menuGrid">Grid</string>
+    <string name="speciesText">Species</string>
+    <string name="usernameText">Username</string>
+    <string name="passwordText">Password</string>
+    <string name="firstNameText">First name</string>
+    <string name="lastNameText">Last name</string>
+    <string name="loginText">Login</string>
+    <string name="registerText">Have not an account register here! </string>
+    <item name="imageWrapperLand" type="id" />
+    <item name="infoWrapperLand" type="id" />
+    <item name="infoWrapper2Land" type="id" />
 </resources>
